# portfolio

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
public/: index.html  script.js  styles.css
src/: main.cpp
